--- a/src/css/product.css
+++ b/src/css/product.css
@@ -82,258 +82,258 @@ body {
 }
 @-moz-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-moz-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-o-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-o-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-webkit-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-webkit-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-moz-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-moz-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-o-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-o-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-webkit-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-webkit-keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @keyframes loadcenter {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.5);
+    height: 10px;
   }
 }
 @-moz-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-moz-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-o-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-o-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-webkit-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-webkit-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-moz-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-moz-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-o-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-o-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-webkit-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @-webkit-keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 @keyframes loadside {
   from {
-    transform: scaleY(1);
+    height: 20px;
   }
   to {
-    transform: scaleY(0.3);
+    height: 7px;
   }
 }
 .h_top {
@@ -397,6 +397,7 @@ body {
   text-align: center;
 }
 .h_top .h_navbar .clearfix .car .car_cont {
+  display: none;
   position: absolute;
   top: 40px;
   right: 0;
@@ -468,6 +469,7 @@ body {
   background: #fff;
 }
 .h_top .h_navbar .clearfix .car:hover .car_cont {
+  display: block;
   height: 100px;
 }
 .h_top .h_navbar .clearfix .car:hover .car_cont .loading,
